--- a/src/pages/skills/skills.module.css
+++ b/src/pages/skills/skills.module.css
@@ -1,6 +1,6 @@
 .main_container {
     text-align: center;
-    background-image: url(../../back4.jpeg);
+    background-image: url(../../back.jpeg);
     width: 100%;
     height: 100%;
     background-size: cover;
