--- a/src/pages/home/home.module.css
+++ b/src/pages/home/home.module.css
@@ -1,10 +1,11 @@
 .App {
-    background-image: url(../../back4.jpeg);
+    background-image: url(../../back.jpeg);
     width: 100%;
     height: 100vh;
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
+    background-color: rgb(46, 49, 49);
   }
   
 .title_container {
@@ -24,7 +25,7 @@
   }
   .title2 {
     font-size: 50px;
-    color: rgba(5, 5, 49, 0.637);
+    color: white;
     margin: 0;
     text-align: right;
     padding-top: 100px;
