--- a/src/pages/home/home.module.css
+++ b/src/pages/home/home.module.css
@@ -18,7 +18,7 @@
     font-size: 70px;
     color: white;
     margin: 0;
-    padding-bottom: 100px;
+    padding-bottom: 50px;
     text-align: right;
     padding-right: 55px;
 
@@ -28,6 +28,15 @@
     color: white;
     margin: 0;
     text-align: right;
-    padding-top: 100px;
+    padding-top: 50px;
+    padding-right: 55px;
+  }
+
+  .title3 {
+    font-size: 30px;
+    color: white;
+    margin: 0;
+    text-align: right;
+    padding-top: 60px;
     padding-right: 55px;
   }
